<resources>
    <string name="app_name">Cook It Now!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="cook_now">Cook Now!</string>
    <string name="menu">Menu</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.
    </string>
    <string name="title">Title</string>
    <string name="description">description</string>
    <string name="skip">skip</string>
    <string name="start">start</string>
    <string name="binding_in_fragment_main_is_null">binding in Fragment Main is null</string>
    <string name="what_do_you_want_to_cook_today">What do you want to cook today?</string>
    <string name="category">category:</string>
    <string name="view_all">View all</string>
    <string name="shop">Shop</string>
    <string name="area">area: </string>
    <string name="tags">tags:</string>
    <string name="recipe_image">recipe image</string>
    <string name="recipe_ingredient">Recipe, ingredient</string>
    <string name="something_went_wrong">something went wrong</string>
    <string name="choose_category">choose category</string>
    <string name="fragment_detail_binding_is_null">fragment detail binding is null</string>
    <string name="recipe">Recipe</string>
    <string name="instructions">instructions</string>
    <string name="binding_in_modalBottomSheet_is_null">binding in Modal bottom Sheet is null</string>
    <string name="status">status:</string>
    <string name="save_recipe_button">save recipe button</string>
    <string name="save">save</string>
    <string name="open">open</string>
    <string name="no_idea">if you have no idea what you want to cook - use it</string>
    <string name="createrecipebinding_is_null">CreateRecipeBinding is null</string>
    <string name="creating_your_recipe">Creating your recipe</string>
    <string name="recipe_name">Recipe name</string>
    <string name="create">create</string>
    <string name="add_image">add image</string>

</resources>