<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.cook.CookFragment"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_idea"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginHorizontal="16dp"/>

    <ImageView
        android:id="@+id/img_recipe"
        android:layout_width="250dp"
        android:layout_height="250dp"/>

    <TextView
        android:id="@+id/tv_recipe_cook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        />

    <Button
        android:id="@+id/btn_cook"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/cook_now"
        android:backgroundTint="@color/copper"
        android:layout_marginTop="16dp"
        />
    <Button
        android:id="@+id/btn_open"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/open"
        android:visibility="gone"
        android:backgroundTint="@color/copper"/>

</LinearLayout>