<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="50dp"/>


    <ImageView
        android:id="@+id/boarding_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28" />

    <TextView
        android:id="@+id/boarding_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="36sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@id/boarding_image"
        app:layout_constraintStart_toStartOf="@id/boarding_image"
        app:layout_constraintEnd_toEndOf="@id/boarding_image"
        />

    <TextView
        android:id="@+id/boarding_tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/boarding_tv_title"
        app:layout_constraintStart_toStartOf="@id/boarding_tv_title"
        app:layout_constraintEnd_toEndOf="@id/boarding_tv_title"
        />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="50dp"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>