<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="250dp"
        android:layout_height="280dp"
        android:id="@+id/сv_recipe"
        app:cardElevation="4dp"
        app:cardCornerRadius="16dp"
        app:cardUseCompatPadding="true"
        >
        <LinearLayout
            android:id="@+id/cardview_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/pastel_blue"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_tv_recipe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="21sp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:maxLines="1"
                android:maxLength="25"
                />

            <ImageView
                android:id="@+id/item_img_recipe"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/recipe_image"
                android:src="@drawable/icon_search"
                />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                >

                <TextView
                    android:id="@+id/item_recipe_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/area"
                    android:textColor="@color/black"
                    android:maxLength="17"
                    android:maxLines="1"
                    />

                <TextView
                    android:id="@+id/item_tv_recipe_tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tags"
                    android:textColor="@color/black"
                    android:maxLines="1"
                    android:maxLength="25"/>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>