<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="28dp"
    android:paddingTop="54dp"
    tools:context=".presentation.ui.fragments.search.SearchFragment"
    tools:ignore="RtlSymmetry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_do_you_want_to_cook_today"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/search_view_bg"
            android:iconifiedByDefault="false"
            android:queryHint="Recipe, ingredient" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_all_category_recipes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/meal_category_slider"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="24dp"

            />

        <FrameLayout
            android:id="@+id/rl_for_tvs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="26dp">

            <TextView
                android:id="@+id/tv_category_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/tv_view_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="@string/view_all"
                android:textColor="@color/black" />

        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/meal_slider"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_marginTop="16dp"
            android:clipChildren="false"
            android:clipToPadding="false" />


    </LinearLayout>

</ScrollView>